<resources>

    <!-- Titles -->
    <string name="app_name">Mis Ventas</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_sell_product_register">Select a Product</string>
    <string name="title_sells">Sells</string>
    <string name="title_sell">Sell</string>
    <string name="title_date">Date</string>
    <string name="title_earn">Earns</string>

    <string name="titile_info">Information</string>

    <string name="email_address">hunterbladek@gmail.com</string>
    <!-- CRUD -->

    <string name="product_title_insert">Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price_buy">Buy Price</string>
    <string name="product_price_sell">Sell Price</string>
    <string name="product_amount">Real</string>
    <string name="product_amount_normal">Amount</string>
    <string name="product_amount_initial">Initial</string>
    <string name="product_currency">Currency</string>

    <string name="product_buy">Buy</string>
    <string name="product_sell">Sell</string>
    <string name="product_earn">Earn</string>

    <string name="product_sell_title_insert">Product Sell</string>
    <string name="product_sell_title_statistics">Products Sells</string>
    <string name="product_sell_amount">Product Amount</string>

    <string name="producto_detail_description">Description</string>

    <string name="sell_title">Sell</string>
    <string name="sell_note">Type a Note</string>

    <!-- Alerts and Actions -->
    <string name="action_cancel">Cancel</string>
    <string name="action_accept">Accept</string>
    <string name="action_create">Create</string>
    <string name="action_modify">Edit</string>
    <string name="action_view_products">Inventory</string>
    <string name="action_view_sells">Sells</string>
    <string name="action_view_reports">Reports</string>
    <string name="action_feedback">Feedback</string>
    <string name="send_feedback_ask">Do you want to send any feedback by email?</string>
    <string name="action_donate">Donate</string>
    <string name="action_generate_pdf">Generate Report</string>
    <string name="action_backup_db">Backup Data Base</string>
    <string name="menu_item_share_product">Share</string>

    <string name="alert_empty_name">Type a name</string>
    <string name="alert_empty_description">Type a description</string>
    <string name="alert_empty_price">Type a value for price</string>
    <string name="alert_empty_amount">Type a value for amount of products</string>
    <string name="alert_overflow_amount">The value is bigger than products available</string>

    <string name="alert_overflow_note">Maximum of characters is 20</string>

    <string name="alert_delete">Do you want to delete the item?</string>
    <string name="alert_action">What do you want to do?</string>

    <string name="alert_file_not_found">File not found</string>
    <string name="alert_selection_sharing">Select the app for sharing</string>

    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="notification">Notification</string>
    <string name="share_name">Name: </string>
    <string name="share_description">Description: </string>
    <string name="share_price">Price: </string>

    <string name="request_permision">Request permission</string>
</resources>
