<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvProduct"
        android:textSize="20sp"
        android:text="@string/product_title_insert"
        android:textAlignment="center"
        />

    <EditText
        android:textAlignment="center"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etProductName"
        android:hint="@string/product_name"/>

    <EditText
        android:textAlignment="center"
        android:hint="@string/product_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etProductDecription"
        app:layout_constraintTop_toBottomOf="@+id/etProductName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:hint="@string/product_price_buy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/priceBuy"
        app:layout_constraintTop_toBottomOf="@+id/etProductDecription"
        app:layout_constraintEnd_toStartOf="@+id/priceSell"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:hint="@string/product_price_sell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/priceSell"
        app:layout_constraintTop_toBottomOf="@+id/etProductDecription"
        app:layout_constraintEnd_toStartOf="@+id/amount"
        app:layout_constraintStart_toEndOf="@+id/priceBuy"/>

    <EditText
        android:inputType="number"
        android:textAlignment="center"
        android:hint="@string/product_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/etProductDecription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priceSell"/>

    <Button
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/priceBuy"
        android:text="@string/action_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/priceSell"
        android:text="@string/action_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acceptProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>