<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSell"
        android:textSize="20sp"
        android:text="@string/sell_title"
        android:textAlignment="center"
        />

    <EditText

        android:textAlignment="center"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etSellNote"
        android:hint="@string/sell_note"/>

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSellNote"/>


    <Button
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/calendar"
        android:text="@string/action_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelSell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/calendar"
        android:text="@string/action_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acceptSell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>