<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorBackgroundMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="15dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/cv1"
                >

                <RelativeLayout
                    android:background="@android:color/transparent"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@android:color/background_light"
                        android:textAlignment="center"
                        android:layout_marginStart="15dp"
                        android:id="@+id/actionViewProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="17sp"
                        android:text="@string/action_view_products" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:layout_constraintTop_toBottomOf="@+id/cv1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cv3"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="15dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/cv2"
                >

                <RelativeLayout
                    android:background="@android:color/transparent"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@android:color/background_light"
                        android:textAlignment="center"
                        android:layout_marginStart="15dp"
                        android:id="@+id/actionViewSells"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="17sp"
                        android:text="@string/action_view_sells" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:layout_constraintTop_toBottomOf="@+id/cv2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="15dp"
                card_view:cardCornerRadius="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="100dp"
                android:id="@+id/cv3"
                >

                <RelativeLayout
                    android:background="@android:color/transparent"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@android:color/background_light"
                        android:textAlignment="center"
                        android:layout_marginStart="15dp"
                        android:id="@+id/actionViewReportList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="17sp"
                        android:text="@string/action_view_reports" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>